--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,117 +1,113 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background-image: url('https://mdbootstrap.com/img/Photos/Others/images/77.jpg?fbclid=IwAR0lYdnIPznyiw7vuf10yTZa-lROsj2XcpIRQyV_6HHvSTEZp_OiYEmlvW8');
-        background-size: cover;
-      }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Liens CSS Bootstrap 5 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
-      .header {
-        background-color: rgba(71, 63, 63, 0.8);
-        color: #fff;
-        text-align: center;
-        padding: 15px;
-      }
+  <style>
+   .background-image{
+          background-image:url("https://mdbootstrap.com/img/new/fluid/city/018.jpg");
+          background-size:cover;
+          background-repeat: no-repeat;
+          margin-top: -38px;
+      
+          height:100vh}
+    p{
+      color: white;
+     }
+     label{
+      color: white;
+    font-size: 20px;
+     }
 
-      .content {
-        padding: 12px;
-      }
+          #map {
+  height: 250px;
+  width: 102%;
+ }
 
-      .card {
-       background-color: transparent;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        margin-bottom: 20px;
-        padding: 20px;
-        margin-right: 50px;
-        margin-left: 50px;
-      }
+  </style>
+</head>
+<body>
+  <div class ="background-image">
 
-      .card h2 {
-        font-size: 20px;
-        margin-top: 0;
-      }
+<div class="container mt-5">
+  <br>
+  <h1 style="color: chocolate;" class="text-center mb-5">Contactez-nous</h1> <br>
+  <div class="row">
+    <div class="col-md-6">
+      <form action="#" method="POST">
+        <div class="mb-3">
+          <label for="nom" class="form-label">Nom</label>
+          <input type="text" class="form-control" id="nom" name="nom" placeholder="Nom" required minlength="1" maxlength="250"[class.is-invalid]="name.invalid && (name.dirty || name.touched)">
+          <div *ngIf="name.invalid && (name.dirty || name.touched)" class="invalid-feedback">
+            <div *ngIf="name.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="name.errors?.['minlength']">
+              This field must have at least 1 character.
+            </div>
+            <div *ngIf="name.errors?.['maxlength']">
+              This field must have at most 250 characters.
+            </div>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="nickname" class="form-label">Prénom</label>
+           <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Prénom" maxlength="10" class="form-control form-control-sm" [class.is-invalid]="nickname.invalid && (nickname.dirty || nickname.touched)">
+           <div *ngIf="nickname.invalid && (nickname.dirty || nickname.touched)" class="invalid-feedback">
+             <div *ngIf="nickname.errors?.['maxlength']">
+               This field must have at most 10 characters.
+             </div>
+           </div>
+        </div>
+        <div class="mb-3">
+          <label for="sujet" class="form-label">Email</label>
+          <input type="email" id="email" name="email" formControlName="email" placeholder="nom@exemple.com" required minlength="1" maxlength="250" class="form-control form-control-sm" [class.is-invalid]="email.invalid && (email.dirty || email.touched)">
+          <div *ngIf="email.invalid && (email.dirty || email.touched)" class="invalid-feedback">
+            <div *ngIf="email.errors?.['required']">
+              This field is required.
+            </div>
+            <div *ngIf="email.errors?.['minlength']">
+              This field must have at least 1 character.
+            </div>
+            <div *ngIf="email.errors?.['maxlength']">
+              This field must have at most 250 characters.
+            </div>
+            <div *ngIf="!email.errors?.['required'] && !email.errors?.['minlength'] && !email.errors?.['maxlength'] && email.errors?.['emailValidator']">
+              Invalid email format.
+            </div>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary"(click)="validate()">Envoyer</button>
 
-      .card p {
-        font-size: 16px;
-      }
-
-      .form {
-
-        background-color: transparent;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        margin-top: 20px;
-        padding: 20px;
-        margin-right: 50px;
-        margin-left: 50px;
-      }
-
-      .form label {
-        display: block;
-        font-size: 16px;
-        margin-bottom: 10px;
-      }
-
-      .form input[type="text"],
-      .form input[type="email"],
-      .form textarea {
-        width: 100%;
-        padding: 10px;
-        border-radius: 5px;
-        border: none;
-        margin-bottom: 20px;
-      }
-
-      .form input[type="submit"] {
-        background-color: #333;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 10px 20px;
-        cursor: pointer;
-      }
-
-      .footer {
-        background-color: rgba(0, 0, 0, 0.8);
-        color: #fff;
-        text-align: center;
-        padding: 15px;
-      }
-
-      label{
-        color: black;
-        font-style: oblique;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="header">
-      <h1 style="font-size: 50px;">Nous contacter</h1>
+      </form>
     </div>
+    <div class="col-md-6">
+      <h2 style="color: rgb(196, 113, 55);">Nos coordonnées</h2>
+      <p> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" >
+        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+              </svg>
+               Adresse:
+        EXPRESS DISPLAY  08 Rue Belhassin JRAD 2080 Ariana Tunisia</p>
+      <p>   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16" style="color:white;">
+        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+      </svg>
+      
+        Téléphone:00216 70 732 069</p>
 
-        <div class="content">
-      <div class="card">
-        <h2 style="font-size: 30px;">Informations</h2>
-     <p>  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" >
-          <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                </svg>
-                 Adresse:
-          EXPRESS DISPLAY
-          08 Rue Belhassin JRAD
-          2080 Ariana
-          Tunisia </p>
-
-        
-        <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
+        <p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
             <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
           </svg>
-          Horraire:ouvert-fermé:
-        <select class=form-control >
+          Horraire:ouvert-fermé: <br>
+        <select class=form-control>
           <option value=un>lundi 09:00-17:00</option>
           <option value=deux>Mardi 09:00-17:00</option>
           <option value=trois>Mercredi 09:00-17:00</option>
@@ -119,95 +115,20 @@
           <option value=trois>Vendredi 09:00-17:00</option>
           <option value=trois>Samedi fermé</option>
           <option value=trois>Dimanche fermé</option>
-         </select></p>
+         </select>
+        </p>
+      <p style="color: black;">   
+         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16" style="color:rgb(5, 5, 5)">
+        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+      </svg>
+      contact@expressdisplay.net</p>
+      <div #mapContainer id="map"></div> 
 
-        <p> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16" style="color:aliceblue">
-          <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
-        </svg>
-        contact@expressdisplay.net
-      </p>
-        <p> 
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16" style="color: white;">
-          <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-        </svg>
-        
-          Téléphone: +216 70 732 069 </p>
-      </div>
-
-
-      <div class="form">
-        <form>
-          <div class="row">
-            <div class="col mb-21">
-              <label for="name" class="form-label" >Nom</label>
-              <input type="text" id="name" [(ngModel)]="user.name" name="name" formControlName="name" placeholder="Nom" required minlength="1" maxlength="250" class="form-control form-control-sm" [class.is-invalid]="name.invalid && (name.dirty || name.touched)">
-              <div *ngIf="name.invalid && (name.dirty || name.touched)" class="invalid-feedback">
-                <div *ngIf="name.errors?.['required']">
-                  This field is required.
-                </div>
-                <div *ngIf="name.errors?.['minlength']">
-                  This field must have at least 1 character.
-                </div>
-                <div *ngIf="name.errors?.['maxlength']">
-                  This field must have at most 250 characters.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col mb-2">
-              <label for="nickname" class="form-label">Prénom:</label>
-              <input type="text"  [(ngModel)]="user.nickname" name="nickname" formControlName="nickname" placeholder="Prénom" maxlength="10" class="form-control form-control-sm" [class.is-invalid]="nickname.invalid && (nickname.dirty || nickname.touched)">
-              <div *ngIf="nickname.invalid && (nickname.dirty || nickname.touched)" class="invalid-feedback">
-                <div *ngIf="nickname.errors?.['maxlength']">
-                  This field must have at most 10 characters.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col mb-2">
-              <label for="email" class="form-label">Email:</label>
-              <input type="email" id="email" [(ngModel)]="user.email" name="email" formControlName="email" placeholder="nom@exemple.com" required minlength="1" maxlength="250" class="form-control form-control-sm" [class.is-invalid]="email.invalid && (email.dirty || email.touched)">
-              <div *ngIf="email.invalid && (email.dirty || email.touched)" class="invalid-feedback">
-                <div *ngIf="email.errors?.['required']">
-                  This field is required.
-                </div>
-                <div *ngIf="email.errors?.['minlength']">
-                  This field must have at least 1 character.
-                </div>
-                <div *ngIf="email.errors?.['maxlength']">
-                  This field must have at most 250 characters.
-                </div>
-                <div *ngIf="!email.errors?.['required'] && !email.errors?.['minlength'] && !email.errors?.['maxlength'] && email.errors?.['emailValidator']">
-                  Invalid email format.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col mb-2">
-            <label mdbLabel class="form-label" for="textAreaExample">Message:</label>
-              <textarea mdbInput class="form-control" id="textAreaExample" rows="4"></textarea>
-             
-            </div>
-          </div>
-          <div class="row">
-            <div class="col mb-2 d-grid"><br>
-              <button type="button" class="btn btn-sm btn-primary">Envoyer</button>
-            </div>
-          </div>
-  
-
-
-
-
-</form>
-      </div>
     </div>
-    <div class="footer">
-      <p></p>
-    </div>
-  </body>
-  
+  </div>
+</div>
+</div>
+<!-- Liens JavaScript Bootstrap 5 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
