--- a/src/app/identifier/identifier.component.html
+++ b/src/app/identifier/identifier.component.html
@@ -17,8 +17,7 @@ h1 {
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"id="exampleModalLabel">S'identifier</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title"id="exampleModalLabel" style="text-align: center;"> Entrez votre numéro de téléphone</h5>
       </div>
       <div class="modal-body">
           <form class="row g-3">
@@ -27,17 +26,29 @@ h1 {
                 <label for="textMobile" class="form-label"></label>
                 <div class="input-group">
                   <div class="input-group-text">+216</div>
-                  <input type="text" class="form-control"id="txtMobile" placeholder="Enter votre numero ">
- 
+                  <input type="tel"  minlength="8" maxlength="8"class="form-control"id="txtMobile" placeholder="Enter votre numero " [(ngModel)]="user.tel"><br>
+          
+                </div>                           
+                  <br>
+                   <p style="text-align: center;">Nous vous enverrons un SMS avec un code de vérification à 6 chiffres.</p>
+                          
                 </div>
+                <div class="col-6" class="text-center">
+                  <button type="button" class="btn btn-outline-info"  data-bs-dismiss="modal">Se Connecter</button>
+                </div>
+                <div class="col-md-10">
+                  <div class="form-group row">
+                    <label  class="col-sm-2 col-form-label">Code </label>
+                    <div class="col-sm-10">
+                      <input type="code" class="form-control is-valid" minlength="4" maxlength="4" placeholder="_ _ _ _">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6" class="text-center">
+                <button type="button" class="btn btn-outline-info"  data-bs-dismiss="modal" (click)="onLoggedin()">Connexion</button>
               </div>
-              <div class="col-12">
-                <label for="inputCode" class="form-label">Code</label>
-                <input type="text" class="form-control" id="inputAddress2" formControlName="code" placeholder=" _ _ _ _ ">
-              </div>
-              <div class="col-6" class="text-center">
-              <button type="button" class="btn btn-outline-info"  data-bs-dismiss="modal">S'identifier</button>
-            </div>
+              <br>
+              <a href="" routerLink="/inscrit" style="text-align: center;">Creer un compte</a>
             </form>
       </div>
       <div class="modal-footer">
@@ -46,3 +57,7 @@ h1 {
   </div>
 </form>
 </html>
+
+
+
+
