a short description of the change

--- a/src/app/agences/agences.component.html
+++ b/src/app/agences/agences.component.html
@@ -155,7 +155,7 @@
                                 <div class="accordion-item">
                     <h2 class="accordion-header d-flex agencysearch" id="headingTwo">
                     
-                        <button class="accordion-button shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="margin-left: 10px;">
+                        <button  type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="margin-left: 10px " (click)="save()">
                      Toutes les agences 
                     
                         </button>
