--- a/src/app/inscrit/inscrit.component.html
+++ b/src/app/inscrit/inscrit.component.html
@@ -6,79 +6,83 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <form>
-          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-            
-          </div>
-
-          <div class="divider d-flex align-items-center my-4">
-            <p class="text-center fw-bold mx-3 mb-0"></p>
-          </div>
-
-          <!-- Email input -->
-          <form >
-            <div class="mb-3">
-                <label class="form-label">Nom  </label>
-                <input type="text" class="form-control" formControlName="nom" required >
+       
+       
+       
+        <div class="form">
+          <form [formGroup]="reactiveForm">
+            <div class="row">
+              <div class="col mb-21">
+                <label for="name" class="form-label" >Nom</label>
+                <input type="text" id="name" [(ngModel)]="user.name" name="name" formControlName="name" placeholder="Nom" required minlength="1" maxlength="250" class="form-control form-control-sm">
+                <!-- <div *ngIf="name.invalid && (name.dirty || name.touched)" class="invalid-feedback">
+                  <div *ngIf="name.errors?.['required']">
+                    This field is required.
+                  </div> -->
+                  <!-- <div *ngIf="name.errors?.['minlength']">
+                    This field must have at least 1 character.
+                  </div> -->
+                  <!-- <div *ngIf="name.errors?.['maxlength']">
+                    This field must have at most 250 characters.
+                  </div> -->
+                </div>
+              </div>
+            <div class="row">
+              <div class="col mb-2">
+                <label for="nickname" class="form-label">Prénom:</label>
+                <input type="text"  [(ngModel)]="user.nickname" name="nickname" formControlName="nickname" placeholder="Prénom" maxlength="10" class="form-control form-control-sm">
+                <!-- <div *ngIf="nickname.invalid && (nickname.dirty || nickname.touched)" class="invalid-feedback">
+                  <div *ngIf="nickname.errors?.['maxlength']">
+                    This field must have at most 10 characters.
+                  </div>
+                </div> -->
+              </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label">Prenom </label>
-                <input type="text" class="form-control" formControlName="prenom" required>
+            <div class="row">
+              <div class="col mb-2">
+                <label for="telephone" class="form-label">telephone:</label>
+                <input type="text"  [(ngModel)]="user.telephone" name="telephone" formControlName="telephone" placeholder="Prénom" maxlength="10" class="form-control form-control-sm">
+                </div>
+              </div>
+  
+                    <!-- <div class="row">
+              <div class="col mb-2">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" id="email" [(ngModel)]="user.email" name="email" formControlName="email" placeholder="nom@exemple.com" required minlength="1" maxlength="250" class="form-control form-control-sm" [class.is-invalid]="email.invalid && (email.dirty || email.touched)">
+                <div *ngIf="email.invalid && (email.dirty || email.touched)" class="invalid-feedback">
+                  <div *ngIf="email.errors?.['required']">
+                    This field is required.
+                  </div>
+                  <div *ngIf="email.errors?.['minlength']">
+                    This field must have at least 1 character.
+                  </div>
+                  <div *ngIf="email.errors?.['maxlength']">
+                    This field must have at most 250 characters.
+                  </div>
+                  <div *ngIf="!email.errors?.['required'] && !email.errors?.['minlength'] && !email.errors?.['maxlength'] && email.errors?.['emailValidator']">
+                    Invalid email format.
+                  </div>
+                </div>
+              </div>
+            </div> -->
+            <!-- <div class="row">
+              <div class="col mb-2">
+              <label mdbLabel class="form-label" for="textAreaExample">Message:</label>
+                <textarea mdbInput class="form-control" id="textAreaExample" rows="4"></textarea>
+               
+              </div>
+            </div> -->
+            <div class="row">
+              <div class="col mb-2 d-grid"><br>
+                <button type="button" class="btn btn-sm btn-primary" (click)="save()">Envoyer</button>
+              </div>
             </div>
-            <div class="mb-3">
-              <label class="form-label">telephonne </label>
-              <input type="number" class="form-control" formControlName="tel" required>
-          </div>
-            
-    </form>
-          <div class="d-flex justify-content-between align-items-center">
-            <!-- Checkbox -->
-            <div class="form-check mb-0">
-              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-              <label class="form-check-label" for="form2Example3">
-                Remember me
-              </label>
-            </div>
-            <a href="#!" class="text-body">Forgot password?</a>
-          </div>
-<br><br>
-          <div class="text-center pt-1 mb-3 pb-1">
-            <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" routerLink="/compte">Login</button>
-          </div>
-
-        </form>
-      </div>
-    </div>
-  </div>
-  <div
-    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-    <!-- Copyright -->
     
-    <!-- Copyright -->
-
-    <!-- Right -->
-    <div>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="#!" class="text-white">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </div>
-</section>
-
-
-<div class="row justify-content-center mt-5">
-  <div class="col-md-4">
-     
+  
+  
+  
+  
+  </form>
+        </div>
+      </div>
       
-  </div>
-</div>
